src/bzh/plealog/hge/parser/HGEParser.java
/*  Copyright 2003-2016 Patrick G. Durand
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package bzh.plealog.hge.parser;

import java.util.ArrayList;
import java.util.HashSet;
import java.util.Set;
import java.util.Collection;

import bzh.plealog.hge.dataholder.*;

public class HGEParser/*@bgen(jjtree)*/implements HGEParserTreeConstants, HGEParserConstants {/*@bgen(jjtree)*/
  protected JJTHGEParserState jjtree = new JJTHGEParserState();private static String removeQuotes(Token t){
        return (t.image.substring(1, t.image.length()-1));
    }

/*
 * Start - Process a QueryClause
 */
  final public HGEQuery Query() throws ParseException {
     /*@bgen(jjtree) Query */
  HGEQuery jjtn000 = new HGEQuery(JJTQUERY);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(FROM);
      SimpleQuery();
      jj_consume_token(RETURN);
      QueryReturnClause();
      jj_consume_token(SEMICOLON);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  final public HGESimpleQuery SimpleQuery() throws ParseException {
     /*@bgen(jjtree) SimpleQuery */
  HGESimpleQuery jjtn000 = new HGESimpleQuery(JJTSIMPLEQUERY);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      SimpleQueryDeclaration();
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case AMP:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        jj_consume_token(AMP);
        SimpleQueryDeclaration();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case WHERE:
        jj_consume_token(WHERE);
        QueryWhereClause();
        break;
      default:
        jj_la1[1] = jj_gen;
        ;
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  final public HGESimpleQueryDeclaration SimpleQueryDeclaration() throws ParseException {
     /*@bgen(jjtree) SimpleQueryDeclaration */
  HGESimpleQueryDeclaration jjtn000 = new HGESimpleQueryDeclaration(JJTSIMPLEQUERYDECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      VariableName();
      jj_consume_token(AS);
      QueryClause();
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

/*    HGESimpleQuery SimpleQuery() :
    {}
    {
        ( QueryClause()
          [<WHERE> QueryWhereClause()]
        )
        { return jjtThis; }
    }
*/
  final public HGEQueryClause QueryClause() throws ParseException {
     /*@bgen(jjtree) QueryClause */
  HGEQueryClause jjtn000 = new HGEQueryClause(JJTQUERYCLAUSE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      QueryClauseDeclaration();
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[2] = jj_gen;
          break label_2;
        }
        jj_consume_token(COMMA);
        QueryClauseDeclaration();
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  final public void QueryClauseDeclaration() throws ParseException {
    if (jj_2_1(2)) {
      VarEdgeDeclaration();
    } else if (jj_2_2(2)) {
      VarPathDeclaration();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        VarNodeDeclaration();
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

/*
 * End - Process a QueryClause
 */

/*
 * Start - Process a VarNodeDeclaration
 */
  final public HGEVarNodeDeclaration VarNodeDeclaration() throws ParseException {
     /*@bgen(jjtree) VarNodeDeclaration */
     HGEVarNodeDeclaration jjtn000 = new HGEVarNodeDeclaration(JJTVARNODEDECLARATION);
     boolean jjtc000 = true;
     jjtree.openNodeScope(jjtn000);Token t;
    try {
      VariableName();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IN:
        jj_consume_token(IN);
        TypeExpression();
        break;
      default:
        jj_la1[4] = jj_gen;
        ;
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

/*
 * End - Process a VarNodeDeclaration
 */

/*
 * Start - Process an VarEdgeDeclaration
 */
  final public HGEVarEdgeDeclaration VarEdgeDeclaration() throws ParseException {
     /*@bgen(jjtree) VarEdgeDeclaration */
     HGEVarEdgeDeclaration jjtn000 = new HGEVarEdgeDeclaration(JJTVAREDGEDECLARATION);
     boolean jjtc000 = true;
     jjtree.openNodeScope(jjtn000);Token t;
    try {
      VariableName();
      jj_consume_token(COLON);
      VariableName();
      label_3:
      while (true) {
        jj_consume_token(MINUS);
        VariableName();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case MINUS:
          ;
          break;
        default:
          jj_la1[5] = jj_gen;
          break label_3;
        }
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IN:
        jj_consume_token(IN);
        TypeExpression();
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

/*
 * End - Process an VarEdgeDeclaration
 */

/*
 * Start - Process a VarPathDeclaration
 */
  final public HGEVarPathDeclaration VarPathDeclaration() throws ParseException {
     /*@bgen(jjtree) VarPathDeclaration */
     HGEVarPathDeclaration jjtn000 = new HGEVarPathDeclaration(JJTVARPATHDECLARATION);
     boolean jjtc000 = true;
     jjtree.openNodeScope(jjtn000);Token t;
    try {
      VariableName();
      jj_consume_token(OPENPAR);
      VariableName();
      jj_consume_token(COMMA);
      VariableName();
      jj_consume_token(COMMA);
      PathOperator();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        jj_consume_token(COMMA);
        PathLength();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          jj_consume_token(COMMA);
          PathLength();
          break;
        default:
          jj_la1[7] = jj_gen;
          ;
        }
        break;
      default:
        jj_la1[8] = jj_gen;
        ;
      }
      jj_consume_token(CLOSEPAR);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  final public void PathOperator() throws ParseException {
     /*@bgen(jjtree) PathOperator */
     HGEPathOperator jjtn000 = new HGEPathOperator(JJTPATHOPERATOR);
     boolean jjtc000 = true;
     jjtree.openNodeScope(jjtn000);Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NEXT:
        t = jj_consume_token(NEXT);
        break;
      case CONNECT:
        t = jj_consume_token(CONNECT);
        break;
      case UNTIL:
        t = jj_consume_token(UNTIL);
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
         jjtn000.setValue(new HGEString(t.image));
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void PathLength() throws ParseException {
     /*@bgen(jjtree) PathLength */
     HGEPathLength jjtn000 = new HGEPathLength(JJTPATHLENGTH);
     boolean jjtc000 = true;
     jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(INTEGER_LITERAL);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
         jjtn000.setValue(new HGELong(t.image));
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/*
 * End - Process a VarPathDeclaration
 */

/*
 * Start - used within a Node/Edge/Path Declaration
 */
  final public void VariableName() throws ParseException {
     /*@bgen(jjtree) VariableName */
     HGEVariableName jjtn000 = new HGEVariableName(JJTVARIABLENAME);
     boolean jjtc000 = true;
     jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(IDENTIFIER);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
         jjtn000.setValue(new HGEIdentifier(t.image));
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/*
 * End - used within a Node/Edge/Path Declaration
 */

/*
 * Start - Process a TypeExpression (declaration of Node/Edge data type expression)
 */
  final public HGETypeExpression TypeExpression() throws ParseException {
     /*@bgen(jjtree) TypeExpression */
  HGETypeExpression jjtn000 = new HGETypeExpression(JJTTYPEEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      OrTypeExpression();
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  final public void OrTypeExpression() throws ParseException {
    AndTypeExpression();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OR:
        ;
        break;
      default:
        jj_la1[10] = jj_gen;
        break label_4;
      }
      jj_consume_token(OR);
                     HGEOrTypeExpression jjtn001 = new HGEOrTypeExpression(JJTORTYPEEXPRESSION);
                     boolean jjtc001 = true;
                     jjtree.openNodeScope(jjtn001);
      try {
        AndTypeExpression();
      } catch (Throwable jjte001) {
                     if (jjtc001) {
                       jjtree.clearNodeScope(jjtn001);
                       jjtc001 = false;
                     } else {
                       jjtree.popNode();
                     }
                     if (jjte001 instanceof RuntimeException) {
                       {if (true) throw (RuntimeException)jjte001;}
                     }
                     if (jjte001 instanceof ParseException) {
                       {if (true) throw (ParseException)jjte001;}
                     }
                     {if (true) throw (Error)jjte001;}
      } finally {
                     if (jjtc001) {
                       jjtree.closeNodeScope(jjtn001,  2);
                     }
      }
    }
  }

  final public void AndTypeExpression() throws ParseException {
    UnaryTypeExpression();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
        ;
        break;
      default:
        jj_la1[11] = jj_gen;
        break label_5;
      }
      jj_consume_token(AND);
                  HGEAndTypeExpression jjtn001 = new HGEAndTypeExpression(JJTANDTYPEEXPRESSION);
                  boolean jjtc001 = true;
                  jjtree.openNodeScope(jjtn001);
      try {
        UnaryTypeExpression();
      } catch (Throwable jjte001) {
                  if (jjtc001) {
                    jjtree.clearNodeScope(jjtn001);
                    jjtc001 = false;
                  } else {
                    jjtree.popNode();
                  }
                  if (jjte001 instanceof RuntimeException) {
                    {if (true) throw (RuntimeException)jjte001;}
                  }
                  if (jjte001 instanceof ParseException) {
                    {if (true) throw (ParseException)jjte001;}
                  }
                  {if (true) throw (Error)jjte001;}
      } finally {
                  if (jjtc001) {
                    jjtree.closeNodeScope(jjtn001,  2);
                  }
      }
    }
  }
